完成primes,并编写了vsc的调试启动配置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "stat.h": "c"
+        "stat.h": "c",
+        "user.h": "c",
+        "fs.h": "c",
+        "types.h": "c"
     }
 }
