--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "stat.h": "c",
         "user.h": "c",
         "fs.h": "c",
-        "types.h": "c"
+        "types.h": "c",
+        "param.h": "c"
     }
 }
